// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hello component has a welcome message 1`] = `
<h1
  data-test="hello"
>
  Hello, world!
</h1>
`;

exports[`Hello component has links 1`] = `<Links />`;

exports[`Hello component renders 1`] = `
<div>
  <h1
    data-test="hello"
  >
    Hello, world!
  </h1>
  <Links />
</div>
`;
